Now able to insert Project: Awesome questions in exams.

--- a/html/startAdvanced.html
+++ b/html/startAdvanced.html
@@ -130,6 +130,7 @@
 		quizObject.title = $("#quizTitle").val();
 		quizObject.quiz = quiz;
 		var jsonString = JSON.stringify(quizObject);
+        jsonString = jsonString.replace(/"/g, "'");
 
 	    $("#jsontextarea").val(jsonString);
 	}
