Re-added all C++ question types with unit/regression tests and instructor notes.

--- a/test/cppUnitTests.html
+++ b/test/cppUnitTests.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="../js/utils.js"></script>
 
         <script type="text/javascript" src="../js/questions/cppUtilities.js"></script>
+        <script type="text/javascript" src="../js/questions/cppAppropriateVariables.js"></script>
 
         <script type="text/javascript" src="cppUnitTests.js"></script>
     </body>
