--- a/test/cppRegressionTests.html
+++ b/test/cppRegressionTests.html
@@ -5,6 +5,7 @@
         <title>Project Awesome CPP Regression Tests</title>
         <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.17.1.css">
         <script src="http://code.jquery.com/qunit/qunit-1.17.1.js"></script>
+        <script src="../jquery/jquery-1.5.1.min.js"></script>
     </head>
     <body>
         <div id="qunit"></div>
